--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,9 @@ const { noMarginTop = false } = Astro.props;
     <div class="my-2 flex flex-col items-center whitespace-nowrap sm:flex-row">
       <span>Copyright &#169; {currentYear}</span>
       <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span><a href="https://firmen.wko.at/rafael-cordones-marcos-msc/wien/?firmaid=ea70a605-c16a-4275-be2d-06827fdae484&standortid=0&suchbegriff=rafael+cordones+marcos&page=1">Imprint</a></span>
+      <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
+      <span>Built with <a href="https://github.com/satnaing/astro-paper">AstroPaper</a></span>
     </div>
   </div>
 </footer>
