--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import IconSunHigh from "@/assets/icons/IconSunHigh.svg";
 import IconMenuDeep from "@/assets/icons/IconMenuDeep.svg";
 import LinkButton from "./LinkButton.astro";
 import { SITE } from "@/config";
+import IconRss from "@/assets/icons/IconRss.svg";
 
 const { pathname } = Astro.url;
 
@@ -115,6 +116,16 @@ const isActive = (path: string) => {
             >
               <IconSearch />
               <span class="sr-only">Search</span>
+            </LinkButton>
+          </li>
+          <li class="col-span-1 flex items-center justify-center">
+            <LinkButton
+              href="/rss.xml"
+              ariaLabel="rss"
+              title="RSS Feed"
+            >
+              <IconRss />
+              <span class="sr-only">RSS Feed</span>
             </LinkButton>
           </li>
           {
