Add PostHog web snippet for web analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { ClientRouter } from "astro:transitions";
 import { PUBLIC_GOOGLE_SITE_VERIFICATION } from "astro:env/client";
 import { SITE } from "@/config";
 import "@/styles/global.css";
+import PostHogWebSnippet from "@/components/PostHogWebSnippet.astro";
 
 export interface Props {
   title?: string;
@@ -131,6 +132,7 @@ const structuredData = {
     <ClientRouter />
 
     <script is:inline src="/toggle-theme.js"></script>
+    <PostHogWebSnippet/>
   </head>
   <body>
     <slot />
