--- a/src/components/Datetime.astro
+++ b/src/components/Datetime.astro
@@ -34,10 +34,10 @@ const datetime = dayjs(isModified ? modDatetime : pubDatetime).tz(
 const date = datetime.format("D MMM, YYYY"); // e.g., '22 Mar, 2025'
 ---
 
-<div class:list={["flex items-center gap-x-2 opacity-80", className]}>
+<div class:list={["flex items-center opacity-80", className]}>
   <IconCalendar
     class:list={[
-      "inline-block size-6 min-w-[1.375rem]",
+      "inline-block size-6 min-w-[1.375rem] -ml-1 mr-1",
       { "scale-90": size === "sm" },
     ]}
   />
