--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ const photoblogPosts = sortedPosts.filter(({ data }) =>
     {
       recentPosts.length > 0 && (
         <section id="recent-posts" class="pt-12 pb-6">
-          <h2 class="text-2xl font-semibold tracking-wide">Recent Posts</h2>
+          <h2 class="text-2xl font-semibold tracking-wide">Previous Posts</h2>
           <ul>
             {recentPosts.map(
               (data, index) =>
