--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const photoblogPosts = sortedPosts.filter(({ data }) =>
   <Header />
   <main id="main-content" data-layout="index">
     <section id="hero" class="pt-8 pb-6">
-      <p>
-        Hi! 👋 I'm Rafael. I'm a Software Developer living in Vienna (Austria).
+      <p class="[&_a]:inline-link">
+        👋 I'm Rafael, a Software Engineer <a href="/posts/2024/02/05/i-am-from-barcelona/">from Barcelona</a>. After a couple of stops in <a href="/posts/2008/08/22/kayaking-in-stockholms-archipelago/">Stockholm</a> and Dublin, I settled in Vienna nearly a couple of decades ago. I live here with my partner, two kids and a cat. Welcome to my personal blog.
       </p>
       {
         // only display if at least one social link is enabled
